--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
        <!--new block end-->
       </div>
       <div  style=" position: fixed;bottom: 20px; right: 20px;font-size: 35px;">
-        <span  style="border-style: solid;border-radius: 50%;padding:8px; background-color:yellow;"><i class="fa fa-user-plus" aria-hidden="true" style="margin: 10px;"></i></span>
+        <button id="butRequest">
+          <span  style="border-style: solid;border-radius: 50%;padding:8px; background-color:yellow;"><i class="fa fa-user-plus" aria-hidden="true" style="margin: 10px;"></i></span>
+        </button>
       </div>
     </div>
     <!-- /#page-content-wrapper -->
