--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <!-- /history -->
-        <div style="margin-top: 15px;">
+        <div style="margin-top: 15px;" id="contacts">
           <div class="media border p-3" style="margin: 5px;">
             <img src="media\0.jpg" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width:60px;">           
             <div class="media-body">
